--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,10 @@
   #langSwitchBtn , #googleLoginBtn{
     display: none !important;
   }
+
+    #settingsButton{
+    display: none !important;
+  }
 .heart-center-text {
     position: absolute;
     top: calc(50% - 4vh);
